--- a/index.html
+++ b/index.html
@@ -216,11 +216,12 @@
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2023 codeaashu. All rights reserved.
+        Supraja @ 2025
       </div>
     </footer>
   </body>
 </html>
 <head>
   <script src="script.js"></script>
+
 </head>
