--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>CODE AASHU : Pathway.</title>
+    <title>CODE Supraja : Pathway.</title>
   </head>
   <body>
     <nav>
@@ -225,3 +225,4 @@
   <script src="script.js"></script>
 
 </head>
+
