--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
         <div class="footer__col">
           <h4>Address</h4>
           <p>
-            <span>Address:</span> 11/24 Street, Patel Nagar, Patna, 800003, India
+            <span>Address:</span> Chennai,India
           </p>
           <p><span>Email:</span> info@pathway.com</p>
-          <p><span>Phone:</span> +91 6209950346</p>
+          <p><span>Phone:</span> +91 987654321</p>
         </div>
       </div>
       <div class="footer__bar">
@@ -225,5 +225,6 @@
   <script src="script.js"></script>
 
 </head>
+
 
 
