--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <p>
             <span>Address:</span> Chennai,India
           </p>
-          <p><span>Email:</span> info@pathway.com</p>
+          <p><span>Email:</span> web@pathway.com</p>
           <p><span>Phone:</span> +91 987654321</p>
         </div>
       </div>
@@ -225,6 +225,7 @@
   <script src="script.js"></script>
 
 </head>
+
 
 
 
