--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>CODE Supraja : Pathway.</title>
+    <title>CODE Supraja : Pathway</title>
   </head>
   <body>
     <nav>
@@ -32,20 +32,8 @@
           <div>
             <p class="sub__header">Book Now</p>
             <h1>The Smiling 😊<br />agent for travel</h1>
-            <p class="section__subtitle">
-              Make your travel more enjoyable with us. We are the best travel
-              agency and we are providing the best travel services for our
-              clients.
-            </p>
             <div class="action__btns">
               <button class="btn">Plan a Trip</button>
-              <div class="story">
-                <div class="video__image">
-                  <img src="story.jpg" alt="story" />
-                  <span><i class="ri-play-fill"></i></span>
-                </div>
-                <span>Watch our story</span>
-              </div>
             </div>
           </div>
         </div>
@@ -56,14 +44,6 @@
       <div class="section__header">
         <div>
           <h2 class="section__title">Explore top destinations</h2>
-          <p class="section__subtitle">
-            Explore your suitable and dream places around the world. Here you
-            can find your right destination.
-          </p>
-        </div>
-        <div class="destination__nav">
-          <span><i class="ri-arrow-left-s-line"></i></span>
-          <span><i class="ri-arrow-right-s-line"></i></span>
         </div>
       </div>
       <div class="destination__grid">
@@ -101,10 +81,6 @@
     <section class="trip">
       <div class="section__container trip__container">
         <h2 class="section__title">Best trip package</h2>
-        <p class="section__subtitle">
-          Explore your suitable and dream places around the world. Here you can
-          find your right destination.
-        </p>
         <div class="trip__grid">
           <div class="trip__card">
             <img src="trip-1.jpg" alt="trip" />
@@ -112,8 +88,7 @@
               <p>Wasserwerk Frelberg, Germany</p>
               <div class="rating"><i class="ri-star-fill"></i> 4.2</div>
               <div class="booking__price">
-                <div class="price"><span>From</span> $300</div>
-                <button class="book__now">Book Now</button>
+                  <button class="book__now">Book Now</button>
               </div>
             </div>
           </div>
@@ -123,7 +98,6 @@
               <p>Patagonia, Argentina and Chile</p>
               <div class="rating"><i class="ri-star-fill"></i> 4.5</div>
               <div class="booking__price">
-                <div class="price"><span>From</span> $450</div>
                 <button class="book__now">Book Now</button>
               </div>
             </div>
@@ -134,7 +108,6 @@
               <p>The Dolomites, Italy</p>
               <div class="rating"><i class="ri-star-fill"></i> 4.7</div>
               <div class="booking__price">
-                <div class="price"><span>From</span> $400</div>
                 <button class="book__now">Book Now</button>
               </div>
             </div>
@@ -162,10 +135,6 @@
             <h2 class="section__title">
               Our trip gallary that will inspire you
             </h2>
-            <p class="section__subtitle">
-              Explore your suitable and dream places around the world. Here you
-              can find your right destination.
-            </p>
             <button class="btn">View All</button>
           </div>
         </div>
@@ -176,10 +145,6 @@
       <div class="section__container subscribe__container">
         <div class="subscribe__content">
           <h2 class="section__title">Subscribe to get special prize</h2>
-          <p class="section__subtitle">
-            Explore your suitable and dream places around the world. Here you
-            can find your right destination.
-          </p>
         </div>
         <div class="subscribe__form">
           <form>
@@ -194,10 +159,6 @@
       <div class="section__container footer__container">
         <div class="footer__col">
           <h3>Pathway<span>.</span></h3>
-          <p>
-            Explore your suitable and dream places around the world. Here you
-            can find your right destination.
-          </p>
         </div>
         <div class="footer__col">
           <h4>Support</h4>
@@ -225,6 +186,7 @@
   <script src="script.js"></script>
 
 </head>
+
 
 
 
