--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <img src="trip-1.jpg" alt="trip" />
             <div class="trip__details">
               <p>Wasserwerk Frelberg, Germany</p>
-              <div class="rating"><i class="ri-star-fill"></i> 4.2</div>
+              <div class="rating"><i class="ri-star-fill"></i> 4.2⭐</div>
               <div class="booking__price">
                   <button class="book__now">Book Now</button>
               </div>
@@ -95,7 +95,7 @@
             <img src="trip-2.jpg" alt="trip" />
             <div class="trip__details">
               <p>Patagonia, Argentina and Chile</p>
-              <div class="rating"><i class="ri-star-fill"></i> 4.5</div>
+              <div class="rating"><i class="ri-star-fill"></i> 4.5⭐</div>
               <div class="booking__price">
                 <button class="book__now">Book Now</button>
               </div>
@@ -105,7 +105,7 @@
             <img src="trip-3.jpg" alt="trip" />
             <div class="trip__details">
               <p>The Dolomites, Italy</p>
-              <div class="rating"><i class="ri-star-fill"></i> 4.7</div>
+              <div class="rating"><i class="ri-star-fill"></i> 4.7⭐</div>
               <div class="booking__price">
                 <button class="book__now">Book Now</button>
               </div>
@@ -185,6 +185,7 @@
   <script src="script.js"></script>
 
 </head>
+
 
 
 
